--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
+        "axios": "^0.21.0",
         "bootstrap": "4.1.3",
         "chart.js": "2.7.2",
         "history": "4.7.2",
@@ -14,7 +15,7 @@
         "react-chartjs-2": "^2.7.4",
         "react-dom": "^16.8.3",
         "react-perfect-scrollbar": "1.2.0",
-        "react-router-dom": "4.2.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
         "reactstrap": "6.4.0"
     },
