--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "pusher": "^4.0.2"
   }
