--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
         "react-perfect-scrollbar": "1.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
-        "reactstrap": "6.4.0"
+        "reactstrap": "6.4.0",
+        "sweetalert2": "^10.12.6"
     },
     "scripts": {
         "start": "react-scripts start",
