--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "react": "^16.8.3",
         "react-chartjs-2": "^2.7.4",
         "react-dom": "^16.8.3",
+        "react-flip-move": "^3.0.4",
         "react-perfect-scrollbar": "1.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
