--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "pusher": "^4.0.2"
+    "pusher": "^4.0.2",
+    "socket.io": "^3.1.1"
   }
 }
