--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "bootstrap": "4.1.3",
         "chart.js": "2.7.2",
         "history": "4.7.2",
+        "moment": "^2.29.1",
         "node-sass": "^4.12.0",
         "react": "^16.8.3",
         "react-chartjs-2": "^2.7.4",
@@ -18,8 +19,10 @@
         "react-perfect-scrollbar": "1.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
+        "react-scroll-to-bottom": "^4.1.0",
         "react-swipeable-views": "^0.13.9",
         "reactstrap": "6.4.0",
+        "socket.io-client": "^3.1.1",
         "sweetalert2": "^10.12.6"
     },
     "scripts": {
